fixed the layout issue on the upload page

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -73,7 +73,7 @@
 
     &__titles {
         font-size: $font-size-section-header;
-        font-weight: 500;
+        font-weight: 600;
         margin: 0;
     }
 
