--- a/src/pages/VideoUploadPage/VideoUploadPage.scss
+++ b/src/pages/VideoUploadPage/VideoUploadPage.scss
@@ -10,7 +10,6 @@
     flex-direction: column;
     align-items: center;
     padding: 1rem;
-    max-width: 600px;
     margin: 0 auto;
 
     @include desktop {
@@ -34,6 +33,7 @@
 .video-upload-page__title {
     font-size: 2rem;
     margin-bottom: 1rem;
+    padding-bottom: 1rem;
 
     @include tablet {
         border-bottom: .0625rem solid $mercury;
@@ -42,7 +42,6 @@
     @include desktop {
         text-align: left; 
         border-bottom: .0625rem solid $mercury;
-        width: 172.5%; 
     }
 }
 
@@ -63,7 +62,7 @@
     }
 
     @include desktop {
-        width: 99%;
+        width: 19.5rem;
         border-radius: 5px;
     }
 }
@@ -85,7 +84,6 @@
 
     @include desktop {
         margin-bottom: 0;
-        width: 99%;
     }
 }
 
@@ -100,7 +98,6 @@
     text-transform: uppercase;
 
     @include desktop {
-        width: 228%;
         font-size: 1.1rem;
     }
 }
@@ -115,7 +112,7 @@
 
     @include desktop {
         font-size: 1.1rem;
-        width: 132%;
+        width: 115%;
     }
 }
 
@@ -124,7 +121,7 @@
     height: 100px;
 
     @include desktop {
-        height: 116px;
+        height: 86px;
         }
 }
 
@@ -191,6 +188,5 @@
         display: flex;
         flex-direction: row-reverse;
         gap: 1rem;
-        margin-left: 65.1rem
     }
 }
